<resources>
    <!--竖屏计算机按钮文本-->
    <string name="app_name">MyCalculator</string>
    <string name="percent">%</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">÷</string>
    <string name="ride">×</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="clear">AC</string>
    <string name="sign">+/-</string>
    <string name="del">C</string>
    <string name="calculation">%1$s</string>
    <string name="total">%1$f</string>

    <!--横屏计算器新增的按钮文本-->
    <string name="openParen">(</string>
    <string name="closeParen">)</string>
    <string name="memoryClear">mc</string>
    <string name="memoryAdd">m+</string>
    <string name="memorySub">m-</string>
    <string name="memoryRead">mr</string>
    <string name="secondFunction">2nd</string>
    <string name="xSquare">x2</string>
    <string name="xCube">x3</string>
    <string name="yPowerOfX">xY</string>
    <string name="xPowerOfE">eX</string>
    <string name="xPowerOfTen">10X</string>
    <string name="oneOfX">1/x</string>
    <string name="squareRoot">√x</string>
    <string name="cubeRoot">3√x</string>
    <string name="yRoot">y√x</string>
    <string name="ln">ln</string>
    <string name="log10">log10</string>
    <string name="xFactorial">x!</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="e">e</string>
    <string name="ee">EE</string>
    <string name="rad">Rad</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="pi">π</string>
    <string name="rand">Rand</string>

    <!--登入注册界面的文本-->
    <string name="userName">昵称</string>
    <string name="user">账户</string>
    <string name="password">密码</string>
    <string name="rePassword">确认密码</string>
    <string name="login">登录</string>
    <string name="ownUser"><u>已有账号</u></string>
    <string name="register">注册</string>
    <string name="log"><u>登录日志</u></string>
    <string name="logs">登录日志</string>
    <string name="userRegister">请输入6-16位英文、数字</string>
    <string name="userInput">请输入您的账号</string>
    <string name="passwordInput">请输入6-16位英文、数字</string>
    <string name="forgetPassword"><u>忘记密码?</u></string>
    <string name="RePassword">请输入新的密码</string>
    <string name="reLogin">返回登录</string>
    <string name="changePassword">修改密码</string>
    <string name="oldPassword">请输入原来的密码</string>
    <string name="newPassword">请输入您要更改的密码</string>
    <string name="newRePassword">请确认您要更改的密码</string>
    <string name="discardChange">放弃修改密码</string>
    <string name="inputType_digits">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_</string>

</resources>
