<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lift"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical|right"
        android:text=""
        android:textColor="#FFFFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/right"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical|right"
        android:text=""
        android:textColor="#FFFFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_per"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/number_backguound"
        android:text="@string/percent"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_0"
        app:layout_constraintStart_toEndOf="@+id/lift"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/number_backguound"
        android:text="@string/zero"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        app:layout_constraintStart_toEndOf="@+id/button_per"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/number_backguound"
        android:text="@string/point"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/number_backguound"
        android:text="@string/one"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_per"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintStart_toEndOf="@+id/lift"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/number_backguound"
        android:text="@string/two"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/number_backguound"
        android:text="@string/three"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/number_backguound"
        android:text="@string/four"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintStart_toEndOf="@+id/lift"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/number_backguound"
        android:text="@string/five"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/number_backguound"
        android:text="@string/six"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toStartOf="@+id/button_sub"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/number_backguound"
        android:text="@string/seven"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintStart_toEndOf="@+id/lift"
        app:layout_constraintTop_toBottomOf="@+id/button_clear" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/number_backguound"
        android:text="@string/eight"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_sign" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/number_backguound"
        android:text="@string/nine"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_ride"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_del" />


    <Button
        android:id="@+id/button_division"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/symbol_background"
        android:text="@string/division"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_ride"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toEndOf="@+id/button_del"
        app:layout_constraintTop_toBottomOf="@+id/text_total" />

    <Button
        android:id="@+id/button_ride"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/symbol_background"
        android:text="@string/ride"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sub"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_division" />

    <Button
        android:id="@+id/button_sub"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/symbol_background"
        android:text="@string/subtract"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_ride" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/symbol_background"
        android:text="@string/add"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_sub" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/symbol_background"
        android:text="@string/equal"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toEndOf="@+id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_add" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/function_background"
        android:text="@string/clear"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_sign"
        app:layout_constraintStart_toEndOf="@+id/lift"
        app:layout_constraintTop_toBottomOf="@+id/text_total" />

    <Button
        android:id="@+id/button_sign"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/function_background"
        android:text="@string/sign"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_del"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/text_total" />

    <Button
        android:id="@+id/button_del"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/function_background"
        android:text="@string/del"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toStartOf="@+id/button_division"
        app:layout_constraintStart_toEndOf="@+id/button_sign"
        app:layout_constraintTop_toBottomOf="@+id/text_total" />

    <TextView
        android:id="@+id/text_cal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:text=""
        android:gravity="center_vertical|right"
        android:textColor="#FFFFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_total"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text=""
        android:gravity="center_vertical|right"
        android:textColor="#FFFFFFFF"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_cal" />

</androidx.constraintlayout.widget.ConstraintLayout>