<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetPasswordActivity"
    android:background="#DDDDDDDD"
    android:screenOrientation="portrait">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x40"
        android:layout_marginEnd="@dimen/x40"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/x400"
            android:layout_height="@dimen/x400"
            android:background="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/x50"
            android:layout_marginBottom="@dimen/x50"
            android:contentDescription="@string/log" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/frame_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/x80"
                    android:layout_height="@dimen/y80"
                    android:layout_marginEnd="@dimen/x50"
                    android:background="@drawable/role"
                    android:layout_marginRight="@dimen/x50"
                    android:contentDescription="@string/log" />

                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="16"
                    android:hint="@string/userInput"
                    android:inputType="textVisiblePassword"
                    android:digits="@string/inputType_digits"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:maxLength="16"
                    android:text=""
                    android:textSize="@dimen/x40"
                    android:autofillHints="no"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/x4"
                android:layout_marginTop="@dimen/y10"
                android:layout_marginBottom="@dimen/y10"
                android:background="@drawable/line_background">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/x80"
                    android:layout_height="@dimen/y80"
                    android:layout_marginEnd="@dimen/x50"
                    android:background="@drawable/lock"
                    android:layout_marginRight="@dimen/x50"
                    android:contentDescription="@string/log" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="@dimen/x450"
                    android:layout_height="wrap_content"
                    android:ems="16"
                    android:hint="@string/passwordInput"
                    android:inputType="textPassword"
                    android:digits="@string/inputType_digits"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:maxLength="16"
                    android:text=""
                    android:textSize="@dimen/x40"
                    android:autofillHints="no"/>

                <ImageView
                    android:id="@+id/clearPassword"
                    android:layout_width="@dimen/x30"
                    android:layout_height="@dimen/x30"
                    android:layout_marginEnd="@dimen/x5"
                    android:background="@drawable/clear_password"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/x5" />

                <ImageView
                    android:id="@+id/hidePassword"
                    android:layout_width="@dimen/x50"
                    android:layout_height="@dimen/x50"
                    android:background="@drawable/hide"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/x4"
                android:layout_marginTop="@dimen/y10"
                android:layout_marginBottom="@dimen/y10"
                android:background="@drawable/line_background">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/x80"
                    android:layout_height="@dimen/y80"
                    android:layout_marginEnd="@dimen/x50"
                    android:background="@drawable/lock"
                    android:layout_marginRight="@dimen/x50"
                    android:contentDescription="@string/log" />

                <EditText
                    android:id="@+id/rePassword"
                    android:layout_width="@dimen/x450"
                    android:layout_height="wrap_content"
                    android:ems="16"
                    android:hint="@string/passwordInput"
                    android:inputType="textPassword"
                    android:digits="@string/inputType_digits"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:maxLength="16"
                    android:text=""
                    android:textSize="@dimen/x40"
                    android:autofillHints="no"/>

                <ImageView
                    android:id="@+id/clearRePassword"
                    android:layout_width="@dimen/x30"
                    android:layout_height="@dimen/x30"
                    android:layout_marginEnd="@dimen/x5"
                    android:background="@drawable/clear_password"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/x5"
                    android:contentDescription="@string/log"/>

                <ImageView
                    android:id="@+id/hideRePassword"
                    android:layout_width="@dimen/x50"
                    android:layout_height="@dimen/x50"
                    android:background="@drawable/hide"
                    android:layout_gravity="center"
                    android:contentDescription="@string/log"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y150">

            <Button
                android:id="@+id/reLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/x40"
                android:layout_marginEnd="@dimen/x40"
                android:background="@drawable/login_background"
                android:text="@string/reLogin"
                android:textSize="@dimen/x50"
                android:textColor="#FFFFFF"
                style="@style/AppTheme"/>

            <Button
                android:id="@+id/changePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/x40"
                android:layout_marginEnd="@dimen/x40"
                android:background="@drawable/login_background"
                android:text="@string/changePassword"
                android:textSize="@dimen/x50"
                android:textColor="#FFFFFF"
                style="@style/AppTheme"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>